--- a/src/web/views/index.hbs
+++ b/src/web/views/index.hbs
@@ -2,19 +2,15 @@
 <html itemscope itemtype="http://schema.org/Product">
   <head>
     <meta charset="utf-8">
-    <title>Dragonbound - HTML5 Free Multiplayer Online Game</title>
-    <meta name='description' content='Play ThorBound now, a Free Multiplayer Online HTML5 Game. Play with or meet new friends anywhere, no downloads. Collect items, new game modes, and challenges.' />
-    <meta name='keywords' content='Play, ThorBound, now, Free, Multiplayer, Online, HTML5, Game, friends, anywhere, no, downloads, items, modes, challenges, 2d shooter, advanced, vs, ai, computer, players, bbtank, ddtank, browser, custom, avatars, ui, theme, interface, gunbound, cash, gold, fast, gp, exp, f2p, free to play, free offers, free currency, aimbot, game, dragonboune.net, games, NO cheaters, NO download, NO hackers, NO installation, private source, public game, shooter, turn based, unique, worm, softnyx, worms, zero exploits, america, peru, gitzwc, gitz, force, history, zero' />
+    <title>LassieGame - HTML5 Free Multiplayer Online Game</title>
+    <meta name='description' content='Play Lassie now, a Free Multiplayer Online HTML5 Game. Play with or meet new friends anywhere, no downloads. Collect items, new game modes, and challenges.' />
+    <meta name='keywords' content='Play, Lassie, now, Free, Multiplayer, Online, HTML5, Game, friends, anywhere, no, downloads, items, modes, challenges, 2d shooter, advanced, vs, ai, computer, players, bbtank, ddtank, browser, custom, avatars, ui, theme, interface, gunbound, cash, gold, fast, gp, exp, f2p, free to play, free offers, free currency, aimbot, game, dragonboune.net, games, NO cheaters, NO download, NO hackers, NO installation, private source, public game, shooter, turn based, unique, worm, softnyx, worms, zero exploits, america, peru, gitzwc, gitz, force, history, zero' />
     <meta property="og:type" content="game" />
-    <meta property="og:title" content="ThorBound - Next generation HTML5 online massive multi-player game!" />
+    <meta property="og:title" content="Lassie - Next generation HTML5 online massive multi-player game!" />
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
-    {{!-- <meta property="og:url" content="https://thbound.com" /> --}}
     <meta property="og:description" content="Play with or against your friends from your browser anywhere for free. Shop for items to make you stronger. Unlock hidden characters, new game modes, and challenges. Meet new friends. Single player option too." />
-    {{!-- <meta property="og:image" content="http://ThorBound.net/static/images/socialsplash.jpg" /> --}}
-    {{!-- <meta property="og:site_name" content="thbound.com" /> --}}
     <meta property="fb:app_id" content="1148457362178325" />
     <meta name="theme-color" content="#000000" />
-    {{!-- <meta name="referrer" content="same-origin"> --}}
     <link rel="manifest" href="/static/app.json?3">
     <script>
       (function() {
@@ -113,7 +109,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="apple-touch-icon" href="/static/images/icon.png">
     <link rel="apple-touch-startup-image" href="/static/images/splash2.png">
-    <meta itemprop="name" content="ThorBound">
+    <meta itemprop="name" content="Lassie">
     <meta itemprop="description" content="Play with or against your friends from your browser anywhere for free. Shop for items to make you stronger. Unlock hidden characters, new game modes, and challenges. Meet new friends. Single player option too.">
     <meta itemprop="image" content="https://DangerBound.net/static/images/icon2_200x200.png">
     <style id="DragonTheme"></style>
@@ -246,7 +242,7 @@
   </head>
   <body>
     <h1 class="hhh">
-      <b> ThorBound - Next generation HTML5 online massive multi-player game! <br> Play ThorBound now, a Free Multiplayer Online HTML5 Game. Play with or meet new friends anywhere, no downloads. Collect items, new game modes, and challenges. <br> Play with or against your friends from your browser anywhere for free. Shop for items to make you stronger. Unlock hidden characters, new game modes, and challenges. Meet new friends. Single player option too. <br> Play, ThorBound, now, Free, Multiplayer, Online, HTML5, Game, friends, anywhere, no, downloads, items, modes, challenges, 2d shooter, advanced, vs, ai, computer, players, bbtank, ddtank, browser, custom, avatars, ui, theme, interface, gunbound, cash, gold, fast, gp, exp, f2p, free to play, free offers, free currency, aimbot, game, dragonboune.net, games, NO cheaters, NO download, NO hackers, NO installation, private source, public game, shooter, turn based, unique, worm, softnyx, worms, zero exploits, america, peru, gitzwc, gitz, force, history, zero </b>
+      <b> Lassie - Next generation HTML5 online massive multi-player game! <br> Play Lassie now, a Free Multiplayer Online HTML5 Game. Play with or meet new friends anywhere, no downloads. Collect items, new game modes, and challenges. <br> Play with or against your friends from your browser anywhere for free. Shop for items to make you stronger. Unlock hidden characters, new game modes, and challenges. Meet new friends. Single player option too. <br> Play, ThorBound, now, Free, Multiplayer, Online, HTML5, Game, friends, anywhere, no, downloads, items, modes, challenges, 2d shooter, advanced, vs, ai, computer, players, bbtank, ddtank, browser, custom, avatars, ui, theme, interface, gunbound, cash, gold, fast, gp, exp, f2p, free to play, free offers, free currency, aimbot, game, dragonboune.net, games, NO cheaters, NO download, NO hackers, NO installation, private source, public game, shooter, turn based, unique, worm, softnyx, worms, zero exploits, america, peru, gitzwc, gitz, force, history, zero </b>
     </h1>
     <div id="updater"></div>
     <div id="FullScreenButton">
@@ -254,7 +250,7 @@
     </div>
     <div id="fb-root"></div>
     <div id="Loading">
-      <div id="LoadingS"> Loading ThorBound... <br>
+      <div id="LoadingS"> Loading LassieGame... <br>
         <br>
         <div id="meterDN3">
           <div id="meterDN1"></div>
@@ -266,7 +262,7 @@
     </div>
     <div id="LoginWindowBG">
       <div id="LoginWindow">
-        <div id="loginTitle">Login to ThorBound</div>
+        <div id="loginTitle">Login to Lassie</div>
         <!--<span id="LoginFBStatus" class="blackShadow">Existing FB users only</span>
         <div id="myLoginFB"></div>
         <div id="ConnectWithFacebook" class="grayscale FBLoginBtn"></div>-->
@@ -318,7 +314,7 @@
     <div id="ranking_panel_open" class="opacity_button NoSelect">Rankings <div class="Alt">Z</div>
     </div>
     <div id="ranking_panel">
-      <div id="ranking_title" class="blackShadow NoSelect">ThorBound Rankings</div>
+      <div id="ranking_title" class="blackShadow NoSelect">Lassie Rankings</div>
       <div id="ranking_btns" class="NoSelect">
         <div id="ranking_btn_guilds" class="ranking_btn NoSelect blackShadow">Guilds</div>
         <div id="ranking_btn_weekly" class="ranking_btn NoSelect blackShadow"></div>
