--- a/src/web/views/event.hbs
+++ b/src/web/views/event.hbs
@@ -396,7 +396,7 @@
 				font-family:Goudy Stout; font-size:15px; 		background-color: transparent; color:#fff; text-shadow: 1px 1px 1px rgba(0,0,0,0.65); text-align:center;" readonly/>
         </div>
         <div id="mas">
-            <a href="https://thorbound.com/event#" target="_parent">
+            <a href="https://t.me/lassiegame#" target="_parent">
                 <img src="/static/img//btn_mas.png" title="Obtener punto!"/>
             </a>
         </div>
