--- a/src/web/views/index.hbs
+++ b/src/web/views/index.hbs
@@ -543,6 +543,7 @@
       </div>
     </div>
     <div id="dialogCreateRoom" class="NoSelect">
+      <!-- pisdiet -->
       <input type="text" id="createRoomTitle" value="Hello World" maxlength="30">
       <div id="CreateRoomPrivateCheckbox" class="checkboxOff opacity_button"></div>
       <div id="CreateRoomPassword" class="hide">
