--- a/src/web/views/index.hbs
+++ b/src/web/views/index.hbs
@@ -557,10 +557,17 @@
             </div>
       </div>
 
-      <div id="CreateRoomPrivateCheckbox" class="checkboxOff opacity_button"></div>
-      <div id="CreateRoomPassword" class="hide">
-        <input type="text" id="createRoomPasswordInput" value="" maxlength="10">
-      </div>
+
+      <section class="s_Pass">
+
+        <div id="CreateRoomPrivateCheckbox" class="checkboxOff opacity_button">PIN</div>
+        <div id="CreateRoomPassword" class="hide">
+          <input type="text" id="createRoomPasswordInput" value="" maxlength="10">
+        </div>
+
+      </section>
+
+      
 
       <section class="s_Room">
             <div class="s_Room--Iz">
