modal_create_room

--- a/src/web/views/index.hbs
+++ b/src/web/views/index.hbs
@@ -549,7 +549,7 @@
         <h2>Create Room</h2>
       </div>
       <div class="s_Title">
-            <div className="s_Txt">
+            <div class="s_Txt">
                 Name
             </div>
             <div>
