--- a/src/web/views/screenshot_verified.hbs
+++ b/src/web/views/screenshot_verified.hbs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>ThorBound ScreenShot</title>
+<title>Lassie ScreenShot</title>
 <meta property="og:type" content="website" />
 <meta property="og:title" content="ClassicBound ScreenShot" />
 <meta property="og:description" content="ClassicBound ScreenShot" />
