--- a/src/web/views/shop.hbs
+++ b/src/web/views/shop.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{{{guild}}} - ThorBound Guild Shop</title>
+        <title>{{{guild}}} - Lassie Guild Shop</title>
         <!--<script src="/cdn-cgi/DangerBound/head/iR8OSjNSfwcexYD8YdkF6QmafNg.js"></script>-->
         <script src="/static/js/jquery-2.1.4.min.js"></script>
         <script src="/static/js/QTransform.js"></script>
