--- a/src/web/views/clan.hbs
+++ b/src/web/views/clan.hbs
@@ -95,9 +95,9 @@
                 <span class="text-gray-500">|</span>
                 <a href="/settings" class="text-blue-300 hover:text-blue-200 transition-all duration-300">Settings</a>
                 <span class="text-gray-500">|</span>
-                <a href="/logout?next=/{{ guild }}/{{ guild }}" class="text-blue-300 hover:text-blue-200 transition-all duration-300">Logout</a>
+                <a href="/logout?next=/guild/{{ guild }}" class="text-blue-300 hover:text-blue-200 transition-all duration-300">Logout</a>
                 {{else}}
-                <a href="/login?next=/guild/{{{ guild }}/shop" class="text-blue-300 hover:text-blue-200 transition-all duration-300">Login</a>
+                <a href="/login?next=/guild/{{ guild }}/shop" class="text-blue-300 hover:text-blue-200 transition-all duration-300">Login</a>
                 {{/if}}
             </div>
         </div>
