--- a/src/web/views/clan.hbs
+++ b/src/web/views/clan.hbs
@@ -67,8 +67,11 @@
                         <script>
                             Img2Div2($('.profile-image'), '{{ img }}')
                         </script>
-                        <div class="profile-image w-32 h-32 bg-gray-500 flex items-center justify-center text-4xl text-blue-300">
+                        <div class="profile-image w-32 h-32 bg-gray-600 flex items-center justify-center text-4xl text-blue-300">
+                            <!-- Use this if substring and upper helpers are registered: -->
                             {{ guild | substring 0 1 | upper }}
+                            <!-- Fallback if helpers aren't registered (requires JS preprocessing or custom helper): -->
+                            <!-- {{ guild.[0] | upper }} -->
                         </div>
                     </div>
                     <div class="text-center py-6">
